# -c-

./: CMakeLists.txt  MyLabel.cpp  MyLabel.h  README.md  Ui_graphics.h  Ui_widget.h  graphics.ui  widget.cpp  widget.h  widget.ui
Image_adjust/: image_adjust.cpp  image_adjust.h
data/: data_1.txt  data_2.txt  data_3.txt
energy/: energy.cpp  energy.h
graphics/: graphics.cpp  graphics.h  graphicsPathItem.cpp  graphicsPathItem.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h
resource/: resource.qrc
